--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.josephinemenge.pika.ui.CreateAccountActivity"
-    android:background="@color/greenDark">
+    android:background="@drawable/food_icons">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Create Account"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="30dp"
             android:textStyle="bold"
             android:layout_above="@+id/linearLayout"
@@ -40,12 +40,14 @@
             android:textColor="@color/black"
             android:inputType="textAutoComplete"
             android:textSize="20sp"
-            android:layout_marginTop="50dp"/>
+            android:textColorHint="@color/black"
+            android:layout_marginTop="30dp"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:hint="Email"
+            android:textColorHint="@color/black"
             android:padding="10dp"
             android:textSize="20sp"
             android:id="@+id/emailEditText"
@@ -60,6 +62,7 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:padding="10dp"
+            android:textColorHint="@color/black"
             android:textSize="20sp" />
 
         <EditText
@@ -69,6 +72,7 @@
             android:hint="Confirm Password"
             android:inputType="textPassword"
             android:padding="10dp"
+            android:textColorHint="@color/black"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
         <Button
@@ -84,11 +88,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="17sp"
             android:id="@+id/loginTextView"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Already have an account? Log in here!"/>
 
     </LinearLayout>
