--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/f6"
+        android:background="@drawable/foodbckg"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -22,10 +22,11 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
-            android:text="Begin your Search"
+            android:text="Begin your recipe Search"
             android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="30sp" />
+            android:textColor="@color/black"
+            android:textSize="35sp"
+            android:textStyle="normal"/>
 
         <EditText
             android:id="@+id/fType"
@@ -34,8 +35,8 @@
             android:layout_marginLeft="40dp"
             android:layout_height="wrap_content"
             android:hint="Enter a Food type e.g chicken"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
             android:inputType="textAutoCorrect"
             android:textSize="20sp"
             />
@@ -48,15 +49,15 @@
             android:layout_marginLeft="40dp"
             android:layout_height="wrap_content"
             android:hint="Health Label e.g gluten-free"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
             android:inputType="textAutoCorrect"
             android:textSize="20sp" />
         <Button
             android:id="@+id/FRecipeButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/green"
+            android:background="#F0B67F"
             android:text="Find Recipe"
             android:textColor="@color/white"
             android:textSize="15sp"
@@ -66,8 +67,8 @@
                 android:id="@+id/SavedRecipes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/green"
                 android:text="Saved Recipe's"
+                android:background="#F0B67F"
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:layout_marginTop="30dp">
