--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -81,8 +81,7 @@
                    android:padding="0dp"
                    android:text="Save this recipe"
                    android:textColor="@color/white"
-                   android:drawableBottom="@drawable/ic_save"
-                   />
+                   android:drawableBottom="@drawable/ic_save" />
 
                 <TextView
                     android:id="@+id/websiteLink"
