--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -84,7 +84,7 @@
             android:background="@color/white"
             android:layout_marginTop="13dp"
             android:textColor="@color/white"
-            android:backgroundTint="@color/black"/>
+            android:backgroundTint="#F0B67F"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
