--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="greenDark">#254441</color>
     <color name="white">#FFFF</color>
     <color name="green">#43AA8B</color>
-    <color name="black">#000</color>
+    <color name="black">#0B0A07</color>
 
 </resources>
 
