--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context="com.example.josephinemenge.pika.ui.RecipeDetailActivity">
+    tools:context="com.yonko.pika.ui.RecipeDetailActivity">
 
 
     <android.support.v4.view.ViewPager
