--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
     tools:context="com.yonko.pika.ui.RecipeDetailActivity">
 
-
-    <android.support.v4.view.ViewPager
+    <androidx.core.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/viewPager">
+        android:layout_height="wrap_content">
 
         <android.support.v4.view.PagerTabStrip
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pagerHeader"
-        android:paddingBottom="4dp"
-        android:paddingTop="4dp">
+            android:id="@+id/pagerHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp">
 
-    </android.support.v4.view.PagerTabStrip>
-    </android.support.v4.view.ViewPager>
+        </android.support.v4.view.PagerTabStrip>
+    </androidx.core.view.ViewPager>
 </RelativeLayout>
